--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<!-- Map Style-->
 	<style>
 		#map {
-			width: 1920px;
-			height: 730px;
+			width: 100%;
+			height: 100%;
 			background-color: #222;
 			position: relative;
 		}
