--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
 		<div id='map'>
 			<div class="app-content">
 				<h1>
-					<img src="./covid19.png" alt="Covid19" width="50" height="50">
-					Carte de la situation pandémique au Maroc le 18/09/2020
-					<img src="./covid19.png" alt="Covid19" width="50" height="50">
+					Cartographie Thematique
 				</h1>
 			</div>
 		</div>
